@@ -45,6 +45,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7905: Actually respect the keyencoding parameter to shelve.Shelf.
+
 - Issue #1569291: Speed up array.repeat().
 
 - Provide an interface to set the optimization level of compilation in
